--- a/bibliography.bib
+++ b/bibliography.bib
@@ -7,4 +7,5 @@
 	publisher={Association for Computing Machinery}, 
 	author={Ninareh Mehrabi, Fred Morstatter, Nripsuta Saxena, Kristina Lerman, Aram Galstyan}, 
 	year={2021}, 
-	pages={1-35}}
+	pages={1-35}
+	}
