--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1129,7 +1129,7 @@ Write conclusions here.
 
 \backmatter
 
-%\nocite{*} % comment this to only show the referenced entries from the .bib file
+\nocite{*} % comment this to only show the referenced entries from the .bib file
 
 \bibliographystyle{alpha}
 \bibliography{bibliography}
