doc: maybe fixed

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,7 +5,6 @@
 	number={115}, 
 	journal={ACM Computing Survey}, 
 	publisher={Association for Computing Machinery}, 
-	author={Ninareh Mehrabi, Fred Morstatter, Nripsuta Saxena, Kristina Lerman, Aram Galstyan}, 
+	author={Ninareh Mehrabi Fred Morstatter Nripsuta Saxena Kristina Lerman Aram Galstyan}, 
 	year={2021}, 
-	pages={1-35}
-	}
+	pages={1-35}}
