doc: introduction completed

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,6 +5,16 @@
 	number={115}, 
 	journal={ACM Computing Survey}, 
 	publisher={Association for Computing Machinery}, 
-	author={Ninareh Mehrabi Fred Morstatter Nripsuta Saxena Kristina Lerman Aram Galstyan}, 
+	author={Ninareh Mehrabi and Fred Morstatter and Nripsuta Saxena and Kristina Lerman and Aram Galstyan}, 
 	year={2021}, 
 	pages={1-35}}
+
+@article{fairness_explained,
+	title={Fairness definitions explained},
+	DOI={10.1145/3194770.3194776},
+	journal={FairWare '18: Proceedings of the International Workshop on Software Fairness},
+	publisher={Association for Computing Machinery},
+	author={Sahil Verma and Julia Rubin},
+	year={2018},
+	pages={1-7}
+}
