--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -961,7 +961,7 @@ Write conclusions here.
 
 \backmatter
 
-\nocite{*} % comment this to only show the referenced entries from the .bib file
+%\nocite{*} % comment this to only show the referenced entries from the .bib file
 
 \bibliographystyle{alpha}
 \bibliography{bibliography}
