doc: partially fixed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -963,7 +963,7 @@ Write conclusions here.
 
 %\nocite{*} % comment this to only show the referenced entries from the .bib file
 
-\bibliographystyle{alpha}
+\bibliographystyle{plain}
 \bibliography{bibliography}
 
 
