--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -122,7 +122,7 @@ Race and gender bias in facial recognition technology is a pressing and concerni
 These biases have far-reaching implications. Law enforcement agencies using facial recognition may disproportionately target and misidentify individuals from minority communities, leading to wrongful arrests or increased surveillance. In commercial applications, biased facial recognition can impact hiring processes, access to services, and overall societal fairness. Addressing these biases requires comprehensive strategies, including diversifying training data to be more representative, developing bias detection and mitigation techniques, promoting interdisciplinary research, and fostering discussions around the ethical implications of facial recognition technology. Additionally, regulatory frameworks and guidelines are essential to ensure that these technologies are deployed responsibly, with transparency, accountability, and fairness in mind, to mitigate the adverse effects of bias and foster a more equitable future.
 
 \subsubsection{Criminal Justice Bias}
-Criminal justice bias is a deeply ingrained issue within the legal system that manifests through unequal treatment of individuals based on their race, socioeconomic status, gender, and other factors. The criminal justice system should ideally operate on principles of fairness, justice, and equality before the law. However, biases at various stages of the criminal justice process, from policing and arrest to trial and sentencing, often lead to discriminatory outcomes. \cite{barenstein2019propublica}
+Criminal justice bias is a deeply ingrained issue within the legal system that manifests through unequal treatment of individuals based on their race, socioeconomic status, gender, and other factors. The criminal justice system should ideally operate on principles of fairness, justice, and equality before the law. However, biases at various stages of the criminal justice process, from policing and arrest to trial and sentencing, often lead to discriminatory outcomes.
 
 Racial bias is a significant concern, with people of color, especially Black individuals and communities, experiencing disproportionately higher rates of arrest, harsher sentencing, and a lack of trust in the system. Discriminatory practices such as racial profiling and racial disparities in sentencing contribute to this bias. Socioeconomic bias is another critical factor, where individuals from marginalized and low-income communities may face prejudice in the form of limited access to legal resources and unequal treatment within the legal process.
 
