feat: bibliography updated

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,20 +1,36 @@
-@article{mehrabi2021, 
-title={A Survey on Bias and Fairness in Machine Learning}, 
-volume={54}, 
-DOI={10.1145/3457607}, 
-number={115}, 
-journal={ACM Computing Survey}, 
-publisher={Association for Computing Machinery}, 
-author={Ninareh Mehrabi and Fred Morstatter and Nripsuta Saxena and Kristina Lerman and Aram Galstyan}, 
-year={2021}, 
-pages={1-35}}
+@article{10.1145/3457607,
+author = {Mehrabi, Ninareh and Morstatter, Fred and Saxena, Nripsuta and Lerman, Kristina and Galstyan, Aram},
+title = {A Survey on Bias and Fairness in Machine Learning},
+year = {2021},
+issue_date = {July 2022},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {54},
+number = {6},
+issn = {0360-0300},
+url = {https://doi.org/10.1145/3457607},
+doi = {10.1145/3457607},
+abstract = {With the widespread use of artificial intelligence (AI) systems and applications in our everyday lives, accounting for fairness has gained significant importance in designing and engineering of such systems. AI systems can be used in many sensitive environments to make important and life-changing decisions; thus, it is crucial to ensure that these decisions do not reflect discriminatory behavior toward certain groups or populations. More recently some work has been developed in traditional machine learning and deep learning that address such challenges in different subdomains. With the commercialization of these systems, researchers are becoming more aware of the biases that these applications can contain and are attempting to address them. In this survey, we investigated different real-world applications that have shown biases in various ways, and we listed different sources of biases that can affect AI applications. We then created a taxonomy for fairness definitions that machine learning researchers have defined to avoid the existing bias in AI systems. In addition to that, we examined different domains and subdomains in AI showing what researchers have observed with regard to unfair outcomes in the state-of-the-art methods and ways they have tried to address them. There are still many future directions and solutions that can be taken to mitigate the problem of bias in AI systems. We are hoping that this survey will motivate researchers to tackle these issues in the near future by observing existing work in their respective fields.},
+journal = {ACM Comput. Surv.},
+month = {jul},
+articleno = {115},
+numpages = {35},
+keywords = {representation learning, deep learning, natural language processing, Fairness and bias in artificial intelligence, machine learning}
+}
 
-@article{fairness_explained,
-title={Fairness definitions explained},
-DOI={10.1145/3194770.3194776},
-journal={FairWare '18: Proceedings of the International Workshop on Software Fairness},
-publisher={Association for Computing Machinery},
-author={Sahil Verma and Julia Rubin},
-year={2018},
-pages={1-7}
+@inproceedings{10.1145/3194770.3194776,
+author = {Verma, Sahil and Rubin, Julia},
+title = {Fairness Definitions Explained},
+year = {2018},
+isbn = {9781450357463},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3194770.3194776},
+doi = {10.1145/3194770.3194776},
+abstract = {Algorithm fairness has started to attract the attention of researchers in AI, Software Engineering and Law communities, with more than twenty different notions of fairness proposed in the last few years. Yet, there is no clear agreement on which definition to apply in each situation. Moreover, the detailed differences between multiple definitions are difficult to grasp. To address this issue, this paper collects the most prominent definitions of fairness for the algorithmic classification problem, explains the rationale behind these definitions, and demonstrates each of them on a single unifying case-study. Our analysis intuitively explains why the same case can be considered fair according to some definitions and unfair according to others.},
+booktitle = {Proceedings of the International Workshop on Software Fairness},
+pages = {1-7},
+numpages = {7},
+location = {Gothenburg, Sweden},
+series = {FairWare '18}
 }
