--- a/thesis-style.sty
+++ b/thesis-style.sty
@@ -15,7 +15,7 @@
 \usepackage{ifthen}
 
 % \usepackage[disable]{todonotes} % decommentare prima della versione finale
-\usepackage{todonotes} % commentare prima della versione finale
+%\usepackage{todonotes} % commentare prima della versione finale
 \newcommand{\gcsidenote}[1]{\todo[size=\tiny,color=green]{\textbf{GC:} #1}}
 \newcommand{\gcnote}[1]{\todo[size=\scriptsize,color=green,inline]{\textbf{Giovanni Ciatto:} #1}}
 \newcommand{\dpsidenote}[1]{\todo[size=\tiny,color=red]{\textbf{DP:} #1}}
