--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -15,7 +15,7 @@
 
 
 \newcommand{\thesislang}{english} % commentare in caso di tesi in italiano
-\usepackage{thesis-style}
+%\usepackage{thesis-style}
 % version
 %\newcommand{\versionmajor}{0}
 %\newcommand{\versionminor}{1}
