feat: bib updated and state of art started

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -34,3 +34,17 @@ numpages = {7},
 location = {Gothenburg, Sweden},
 series = {FairWare '18}
 }
+
+@article{GRUETZEMACHER2022102884,
+title = {The transformative potential of artificial intelligence},
+journal = {Futures},
+volume = {135},
+pages = {102884},
+year = {2022},
+issn = {0016-3287},
+doi = {https://doi.org/10.1016/j.futures.2021.102884},
+url = {https://www.sciencedirect.com/science/article/pii/S0016328721001932},
+author = {Ross Gruetzemacher and Jess Whittlestone},
+keywords = {Artificial Intelligence, Transformative AI, Human-level AI, Artificial general intelligence},
+abstract = {The terms 'human-level artificial intelligence' and 'artificial general intelligence' are widely used to refer to the possibility of advanced artificial intelligence (AI) with potentially extreme impacts on society. These terms are poorly defined and do not necessarily indicate what is most important with respect to future societal impacts. We suggest that the term 'transformative AI' is a helpful alternative, reflecting the possibility that advanced AI systems could have very large impacts on society without reaching human-level cognitive abilities. To be most useful, however, more analysis of what it means for AI to be 'transformative' is needed. In this paper, we propose three different levels on which AI might be said to be transformative, associated with different levels of societal change. We suggest that these distinctions would improve conversations between policy makers and decision makers concerning the mid- to long-term impacts of advances in AI. Further, we feel this would have a positive effect on strategic foresight efforts involving advanced AI, which we expect to illuminate paths to alternative futures. We conclude with a discussion of the benefits of our new framework and by highlighting directions for future work in this area.}
+}
