--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -92,6 +92,16 @@ In the following is presented the \emph{State of the Art}, where are presented t
 \chapter{State of the Art} % or Background
 \label{chap:background}
 
+This chapter provides an overview of the previous works and scientific literature that led us to the implementation of fair-by-design methods. This chapter strats
+with an overview on \textbf{artificial intelligence} and its application in both critical sectors and socio-technical systems, going deeply into the issues of \textbf{bias} and \textbf{fairness} in AI systems.
+
+\section{Artificial Intelligence}
+Artificial Intelligence (AI) and Machine Learning (ML) are transformative technologies that are redefining the way we interact with the world. AI refers to the development of computer systems capable of performing tasks that typically require human intelligence, such as speech recognition, problem-solving, and learning. Machine Learning is a subset of AI, involving the creation of algorithms that allow computers to learn patterns and make predictions based on data, improving their performance over time. \\
+AI encompasses a broad range of techniques, including natural language processing, computer vision, robotics, and expert systems. Machine Learning, on the other hand, involves algorithms that enable machines to learn and improve their performance without being explicitly programmed. ML algorithms are designed to identify patterns and make informed decisions based on data input. \\
+If we consider examples of AI in critical sectors such as healthcare and autonomous driving it becomes clear how AI could impact our lives. Beyond these applications it becomes necessary to consider the applications of AI in socio-technical systems. \\
+Socio-technical systems refer to complex interplays between people, technology, and social institutions. AI and ML have a profound impact on these systems, influencing how individuals interact with technology and how society functions as a whole. \\
+The integration of AI and ML raises ethical questions regarding privacy, biases in algorithms, and job displacement due to automation. It is crucial to develop frameworks that ensure fairness, transparency, and accountability in AI systems to mitigate potential harm and ensure equitable benefits. \cite{GRUETZEMACHER202210288} \\ 
+
 %Write background here.
 
 %This section is likely to contain a lot of citations.
