feat: bib and state of art updated

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -102,6 +102,12 @@ If we consider examples of AI in critical sectors such as healthcare and autonom
 Socio-technical systems refer to complex interplays between people, technology, and social institutions. AI and ML have a profound impact on these systems, influencing how individuals interact with technology and how society functions as a whole. \\
 The integration of AI and ML raises ethical questions regarding privacy, biases in algorithms, and job displacement due to automation. It is crucial to develop frameworks that ensure fairness, transparency, and accountability in AI systems to mitigate potential harm and ensure equitable benefits. \cite{GRUETZEMACHER202210288} \\ 
 
+\section{Bias}
+Artificial Intelligence (AI) holds immense promise for revolutionizing various aspects of our lives. From aiding decision-making processes to automating routine tasks, AI systems are increasingly becoming integrated into our daily lives. However, a growing concern within the AI community and society at large is the issue of biases embedded in AI algorithms. \cite{10.1145/3308560.3317590}
+
+\subsection{Understanding Bias in AI}
+Bias in AI refers to the unfair and skewed representation or treatment of individuals or groups based on factors such as race, gender, age, socioeconomic status, or other characteristics. These biases can be unintentionally perpetuated during the development and training of AI models due to historical data imbalances, societal prejudices, or flawed algorithms.
+
 %Write background here.
 
 %This section is likely to contain a lot of citations.
